update recommendation generation code
Signed-off-by: kusuma chalasani <kchalasa@redhat.com>